@startuml
skinparam classAttributeIconSize 0
hide methods
left to right direction

class Platform {
-   String designation
}

class Pharmacy{
-   int id
-   String name
}

class Client{
-   int IBAN
-   long creditCardNumber
-   int validityDate
-   int CCV
}

class User{
-   String name
-   String email
-   String password
-   Integer nif
}

class PharmacyManager{
}

class Order{
-   int id
-   float amount
-   float totalWeight
-   float additionalFee
-   Date orderDate
-   String description
-   String status
}

class Product{
-   int id
-   String name
-   String description
-   float unitaryPrice
-   float unitaryWeight
}

class PharmacyTransfer{
-   int id
-   Date transferDate
-   int quantity
}

Platform "1" -- "*" Pharmacy : has registered >
Platform "1" -- "*" PharmacyManager : has registered >
Platform "1" -- "*" Order : has registered >
Platform "1" -- "*" Product : has registered >
Platform "1" -- "*" Client : has registered >
PharmacyManager "0..1" -- "1" User: acts as >
Pharmacy "1" -- "1" PharmacyManager : has >
Order "1" -- "*" Product : has >
Order "1" -- "*" Pharmacy : has >
Client "0..1" -- "1" User: acts as >
Client "1" -- "1" Order : makes >
Client "1" -- "1" Address : has >
Order "1" -- "1" Address : has >
PharmacyTransfer "1" -- "2" Pharmacy : has >
PharmacyTransfer "1" -- "1" Product : has >
PharmacyTransfer "1" -- "1" Order : has >
@enduml